%% Fire Extinguisher Management System (FEMS) — Database ER Diagram (v2)
%% Updated: ownerId on FIRE_EXTINGUISHER, PENDING/APPROVED inspection statuses.
%% Paste into https://mermaid.live or any Mermaid renderer.

erDiagram
  USER ||--o{ FIRE_EXTINGUISHER : "owns (ownerId)"
  USER ||--o{ INSPECTION : "schedules (scheduledBy)"
  USER ||--o{ INSPECTION : "assigned as inspector"
  USER ||--o{ MAINTENANCE_LOG : "logs"
  USER ||--o{ NOTIFICATION : "receives"
  FIRE_EXTINGUISHER ||--o{ INSPECTION : "subject of"
  FIRE_EXTINGUISHER ||--o{ MAINTENANCE_LOG : "tracked by"
  FIRE_EXTINGUISHER ||--o{ NOTIFICATION : "triggers"
  INSPECTION ||--o{ MAINTENANCE_LOG : "results in"

  USER {
    uuid     id PK
    string   firstName
    string   lastName
    string   email UK
    string   passwordHash "bcrypt"
    enum     role "ADMIN | INSPECTOR | USER"
    boolean  isActive
    string   resetToken "nullable"
    datetime resetTokenExpiresAt "nullable"
    datetime createdAt
    datetime updatedAt
  }

  FIRE_EXTINGUISHER {
    uuid     id PK
    string   serialNumber UK
    string   location
    enum     type "WATER | CO2 | FOAM | DRY_CHEMICAL"
    string   size "2.5lbs | 5lbs | 9lbs | 12lbs"
    datetime installationDate
    datetime expiryDate
    enum     status "ACTIVE | EXPIRED | NEEDS_MAINTENANCE | OUT_OF_SERVICE"
    uuid     ownerId FK "nullable — assigned USER"
    datetime createdAt
    datetime updatedAt
  }

  INSPECTION {
    uuid     id PK
    uuid     extinguisherId FK
    uuid     scheduledById FK "user who requested"
    uuid     inspectorId FK "nullable — assigned inspector"
    datetime scheduledAt
    enum     status "PENDING | APPROVED | SCHEDULED | IN_PROGRESS | COMPLETED | CANCELLED | OVERDUE"
    string   result "nullable"
    string   notes "nullable — reason for request"
    datetime completedAt "nullable"
    datetime createdAt
    datetime updatedAt
  }

  MAINTENANCE_LOG {
    uuid     id PK
    uuid     extinguisherId FK
    uuid     inspectorId FK
    uuid     inspectionId FK "nullable"
    string   actionsTaken "min 10 chars"
    enum     conditionNoted "GOOD | FAIR | POOR | DAMAGED | NEEDS_REPLACEMENT"
    datetime actionDate
    datetime createdAt
  }

  NOTIFICATION {
    uuid     id PK
    uuid     userId FK
    uuid     extinguisherId FK "nullable"
    enum     type "INSPECTION_SCHEDULED | INSPECTION_REMINDER | EXPIRY_WARNING | MAINTENANCE_LOGGED | ACCOUNT"
    enum     channel "EMAIL | SYSTEM"
    string   message
    boolean  isRead
    datetime sentAt
  }
